[project]
name = ""
version = ""
description = ""
authors = [{ name = "xiaomoe", email = "studyxiao@163.com" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.247",
    "mypy>=1.0.0",
    "pre-commit>=3.0.4",
]
doc = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.12",
    "mkdocstrings[python]>=0.20.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "F",  # pyflake
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "N",  # naming
    "I",  # isort
    "UP", # upgrade
    "A",  # builtins
    # "S",   # bandit
    "SIM",
    "RUF",
    # "PTH",
    "ANN",
]
ignore = ['D211', 'D213']
# include .gitignore
respect-gitignore = true

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = 3.11
# check_untyped_defs = false
