[project]
name = ""
version = ""
description = ""
authors = [{ name = "xiaomoe", email = "studyxiao@163.com" }]
dependencies = [
    "flask>=2.2.3",
    "pydantic>=1.10.5",
    "python-dotenv>=0.21.1",
    "pymysql>=1.0.2",
    "cryptography>=39.0.1",
    "sqlalchemy>=2.0.4",
    "redis>=4.5.1",
    "orjson>=3.8.6",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.247",
    "mypy>=1.0.0",
    "pre-commit>=3.0.4",
    "types-redis>=4.5.1.1",
]
doc = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.12",
    "mkdocstrings[python]>=0.20.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "F",  # pyflake
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "N",  # naming
    "I",  # isort
    "UP", # upgrade
    "A",  # builtins
    # "S",   # bandit
    "SIM",
    "RUF",
    # "PTH",
    "ANN",
]
ignore = ['D211', 'D213', 'ANN101', 'ANN401', 'N818']
# include .gitignore
respect-gitignore = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["dict"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = 3.11
# check_untyped_defs = false
