[project]
name = ""
version = ""
description = ""
authors = [{ name = "xiaomoe", email = "studyxiao@163.com" }]
dependencies = [
    "flask>=2.2.3",
    "pydantic>=1.10.6",
    "python-dotenv>=1.0.0",
    "pymysql>=1.0.2",
    "cryptography>=39.0.2",
    "redis>=4.5.1",
    "orjson>=3.8.7",
    "qcloud-python-sts>=3.1.3",
    "structlog>=22.3.0",
    "gunicorn>=20.1.0",
    "pyjwt>=2.6.0",
    "requests>=2.28.2",
    "simple-websocket>=0.9.0",
    "elasticsearch>=8.6.2",
    "sqlalchemy>=2.0.6",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.256",
    "mypy>=1.1.1",
    "pre-commit>=3.1.1",
    "types-redis>=4.5.1.5",
    "types-requests>=2.28.11.15",
    "rich>=13.3.2",
    "refurb>=1.14.0",
]
doc = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.3",
    "mkdocstrings[python]>=0.20.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

select = [
    "A",   # flake8-builtins
    "ANN",
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F",   # pyflakes
    "G",   # flake8-logging-format
    # "I",   # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "PT",
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle - warning
    "YTT", # flake8-2020
]
ignore = [
    "D100",   # pydocstyle - missing docstring in public module
    "D101",   # pydocstyle - missing docstring in public class
    "D102",   # pydocstyle - missing docstring in public method
    "D103",   # pydocstyle - missing docstring in public function
    "D104",   # pydocstyle - missing docstring in public package
    "D105",   # pydocstyle - missing docstring in magic method
    "D106",   # pydocstyle - missing docstring in public nested class
    "D107",   # pydocstyle - missing docstring in __init__
    'D211',
    'D213',
    'ANN101',
    'ANN102',
    'ANN401',
    'N818',
]
# include .gitignore
respect-gitignore = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["dict", "format", "id", "set"]

[tool.mypy]
files = "src"
python_version = 3.11
strict = true
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[tool.refurb]
python_version = "3.11"
